app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import "tailwindcss";

@theme{
    --color-primary:#F2F2F2;
    --color-secondary:#B6B09F;
    --color-button-bg:#EAE4D5;
    --color-button-color:#000000;

    --font-indie: "Indie Flower", cursive; 
    --font-pt_serif: "PT Serif", serif; 

}
html{
    scroll-behavior:smooth;
}

